api: websites (#40)
