# app/src/main/java/org/hsse/news/api/schemas/request/website/WebsitePostRequest.java
@@ -1,0 +1,11 @@
+package org.hsse.news.api.schemas.request.website;
+
+import org.checkerframework.checker.units.qual.N;
+import org.jetbrains.annotations.NotNull;
+
+import java.net.URI;
+
+public record WebsitePostRequest(
+       URI url, String description
+) {
+}
